<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Express Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_transaction">Add transaction</string>
    <string name="first_fragment_label">fi</string>
    <string name="second_fragment_label">second</string>
    <string name="expense">Expense</string>
    <string name="investment">Investment</string>
    <string name="income">Income</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="select_transaction_date">Select transaction date</string>
    <string name="enter_notes">Enter notes</string>
</resources>