<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.devstudio.transactions.acivity.TransactionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="snapMargins"
            app:menu="@menu/transaction_menu"
            app:navigationIcon="@drawable/ic_close"
            app:navigationIconTint="?attr/colorOnSurface"
            app:title="@string/add_transaction" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_max="640dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/keyboard_wrapper"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:padding="@dimen/default_padding">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/transaction_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/default_margin"
                        android:padding="@dimen/default_padding"
                        app:checkedButton="@+id/expense_mode"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <Button
                            android:id="@+id/expense_mode"
                            style="@style/toggleButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/primary_button_padding"
                            android:text="@string/expense"
                            android:textSize="@dimen/default_body_text_size" />

                        <Button
                            android:id="@+id/income_mode"
                            style="@style/toggleButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/primary_button_padding"
                            android:text="@string/income"
                            android:textSize="@dimen/default_body_text_size" />

                        <Button
                            android:id="@+id/investment_mode"
                            style="@style/toggleButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/primary_button_padding"
                            android:text="@string/investment"
                            android:textSize="@dimen/default_body_text_size" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/note_text_wrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/transaction_mode"
                        android:hint="@string/enter_notes"
                        app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                        app:boxCornerRadiusBottomStart="@dimen/default_radius"
                        app:boxCornerRadiusTopEnd="@dimen/default_radius"
                        app:boxCornerRadiusTopStart="@dimen/default_radius">

                        <EditText
                            android:id="@+id/note_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:autofillHints="notes"
                            android:imeOptions="actionDone"
                            android:isScrollContainer="true"
                            android:labelFor="@+id/note_text"
                            android:lines="1"
                            android:maxLines="1"
                            android:saveEnabled="true"
                            android:scrollbars="horizontal"
                            android:singleLine="true"
                            android:textSize="@dimen/default_body_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/transaction_date"
                        style="@style/Widget.Material3.CompoundButton.RadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/note_text_wrapper"
                        android:layout_marginBottom="@dimen/default_margin"
                        android:background="@drawable/border_bottom_line"
                        android:gravity="center_vertical"
                        android:includeFontPadding="true"
                        android:paddingBottom="@dimen/default_padding"
                        android:text="@string/select_transaction_date"
                        android:textSize="@dimen/default_body_text_size"
                        app:drawableEndCompat="@drawable/date_icon" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/category_group"
                        style="@style/Widget.Material3.Chip.Suggestion.Elevated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/transaction_date"
                        app:selectionRequired="true"
                        app:singleSelection="true" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/futurePayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/category_group"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/default_body_text_size" />
                </RelativeLayout>
            </ScrollView>

            <FrameLayout
                android:id="@+id/keyboard_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/keyboard_background"
                android:elevation="@dimen/default_elevation">

                <include
                    android:id="@+id/keyboard"
                    layout="@layout/keyboard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>